1.84 2025-??-??
 - Syncer copy: Make .patch if not already there
 - Explicit rsync protocol for default rsync URL
 - Convert APC (deprecated) FTP to general purpose FTP sync:
   - Make FTP Host and FTP Port configurable
   - Do not sync symlinks (was breaking permissions)
 - Remove xt/sysinfo/sysinfo_macos.t that was moved to System::Info 

1.83 2024-12-07
 - "Hello World!" from tib
 - Maintenance release: cleaning, moving some files in distribution/repository

1.82 2024-04-28T13:51:53+01:00 (70842fe => Abe Timmerman)
 - (Abe Timmerman, Sun, 28 Apr 2024 13:51:53 +0100) Autocommit for
   distribution Test-Smoke 1.82 (minor)

1.81_03 2024-04-28T10:03:23+01:00 (cdac604 => Abe Timmerman)
 - (Abe Timmerman, Sun, 28 Apr 2024 10:03:23 +0100) Autocommit for
   distribution Test-Smoke 1.81_03 (same)

1.81_02 2024-04-27T17:34:20+01:00 (5d04dd4 => Abe Timmerman)
 - (Abe Timmerman, Sat, 27 Apr 2024 17:34:20 +0100) Autocommit for
   distribution Test-Smoke 1.81_02 (same)
 - (Abe Timmerman, Sun, 28 Apr 2024 10:00:50 +0100) Allow ':' in paths (for
   Win32)

1.81_01 2024-04-27T16:44:46+01:00 (cb4aff5 => Abe Timmerman)
 - (Abe Timmerman, Sat, 27 Apr 2024 16:44:46 +0100) Autocommit for
   distribution Test-Smoke 1.81_01 (same)
 - (Abe Timmerman, Sat, 27 Apr 2024 17:31:58 +0100) Add JSON as test
   dependency, work around perl bug

1.81 2023-10-27T09:21:36+02:00 (c932d7e => Abe Timmerman)
 - (Abe Timmerman, Fri, 27 Oct 2023 09:21:36 +0200) Autocommit for
   distribution Test-Smoke 1.81 (minor)
 - (Abe Timmerman, Wed, 25 Oct 2023 19:54:55 +0200) Add support for
   Cpanel::JSON::XS
 - We should also support Cpanel::JSON::XS, dunno if speed is a thing
 - here...
 - Nicked 'JSON' from JSON::MaybeXS
 - (Abe Timmerman, Fri, 27 Oct 2023 09:24:40 +0200) Open new development
   branch
 - (Abe Timmerman, Mon, 30 Oct 2023 09:44:25 +0100) Merge branch
   'feature/cpanel-json-xs' into development
 - (Abe Timmerman, Wed, 25 Oct 2023 20:33:16 +0200) Add a Queue for reports
   to repost