@@ -78,12 +78,11 @@ my %CONFIG = (
     },
 
 # these settings have to do with synctype==snapshot
-    df_snapurl => 'example.com/uploads/',
-    df_snapfile => 'perl-blead.tar.gz',
+    df_snapurl => 'https://github.com/Perl/perl5/archive/refs/heads/blead.tar.gz',
     df_snaptar => '',
 
     snapshot   => {
-        allowed  => [qw(snapurl snapfile snaptar)],
+        allowed  => [qw(snapurl snaptar)],
         required => [qw()],
         class    => 'Test::Smoke::Syncer::Snapshot',
     },
